--- a/_config.yml
+++ b/_config.yml
@@ -8,14 +8,14 @@ pygments: true
 # Themes are encouraged to use these universal variables 
 # so be sure to set them if your theme uses them.
 #
-title : Jekyll Bootstrap
-tagline: Site Tagline
+title : Taa Deem ! 
+tagline: A few words about PostgreSQL and other things
 author :
-  name : Name Lastname
-  email : blah@email.test
-  github : username
-  twitter : username
-  feedburner : feedname
+  name : Damien Clochard
+  email : damien@dalibo.com
+  github : daamien
+  twitter : daamien
+  feedburner : 
 
 # The production_url is only used when full-domain names are needed
 # such as sitemap.txt 
