--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ highlighter: pygments
 # Themes are encouraged to use these universal variables 
 # so be sure to set them if your theme uses them.
 #
-title : Taa Deem ! 
+title :  
 tagline: A few words about PostgreSQL and other things
 author :
   name : Damien Clochard
@@ -19,7 +19,11 @@ author :
   linkedin : https://www.linkedin.com/pub/damien-clochard/a6/b/830
   gplus : https://plus.google.com/u/0/+damienclochard/	
   feedburner : 
-  bio : "My name's Damien Clochard and I work at Dalibo, a French PostgreSQL company. I'm also the executive editor of PG Magazine (pgmag.org)"
+  bio : "My name's Damien Clochard and I work at <a href='http://www.dalibo.com'>Dalibo</a>, a French PostgreSQL company. <br/> 
+	 I'm also the executive editor of <a href='http://www.pgmag.org'>PG Magazine,  </a>
+	 president of the <a href='http://asso.postgresql.fr'>French Speaking PostgreSQL Association</a>,
+	 and an active member of the <a href='http://opm.io'>Open PostgreSQL Monitoring</a> project
+	"
 
 
 # The production_url is only used when full-domain names are needed
