--- a/_config.yml
+++ b/_config.yml
@@ -110,7 +110,7 @@ JB :
   analytics :
     provider : google 
     google : 
-        tracking_id : 'UA-123-12'
+        tracking_id : 'UA-3389140-1'
     getclicky :
       site_id : 
     mixpanel :
