--- a/_config.yml
+++ b/_config.yml
@@ -34,8 +34,8 @@ author :
 # Else if you are pushing to username.github.io, replace with your username.
 # Finally if you are pushing to a GitHub project page, include the project name at the end.
 #
-#production_url : http://daamien.github.io/blog/
-production_url : /
+production_url : http://blog.taadeem.net/
+#production_url : /
 
 # All Jekyll-Bootstrap specific configurations are namespaced into this hash
 #
