--- a/_config.yml
+++ b/_config.yml
@@ -37,6 +37,9 @@ author :
 production_url : http://blog.taadeem.net/
 #production_url : /
 
+theme: 
+  name: dbyll
+
 # All Jekyll-Bootstrap specific configurations are namespaced into this hash
 #
 JB :
