--- a/_config.yml
+++ b/_config.yml
@@ -21,8 +21,8 @@ author :
   feedburner : 
   bio : "My name's Damien Clochard and I work at <a href='http://www.dalibo.com'>Dalibo</a>, a French PostgreSQL company. <br/> 
 	 I'm also the executive editor of <a href='http://www.pgmag.org'>PG Magazine,  </a>
-	 president of the <a href='http://asso.postgresql.fr'>French Speaking PostgreSQL Association</a>,
-	 and an active member of the <a href='http://opm.io'>Open PostgreSQL Monitoring</a> project
+	 president of the <a href='http://asso.postgresql.fr'>French Speaking PostgreSQL Association</a>
+	 
 	"
 
 
